# EE346_Final

./: README.md
lane_following/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
lane_following/launch/: race_track.launch
lane_following/models/tag_0/: model.config  model.sdf
lane_following/models/tag_0/materials/scripts/: tag.material
lane_following/scripts/: Follower.py  beep.py  final_test0.py  final_test1.py  final_test2.py  final_test3.py  move_test.py  test1.py
lane_following/utils/: produce_marker.py
